--- a/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/PlanungManagement.tex
@@ -1,9 +1,15 @@
 \section{Projektplanung /-Management}
-	Das Projektteam 32 besteht aus sieben Personen welche sich auf folgende Studienrichtungen aufteilen: 
-	Drei Personen aus der Maschinentechnik, drei Personen aus der Informatik und eine Person aus der Elektrotechnik. 
-	Die Studienrichtungen sind sogleich die jeweiligen Verantwortungen. In den Bereichen mit mehreren Projektmitgliedern wird die Verantwortung 
-	für Teilaufgaben jeweils situativ verteilt. Für allgemeine Projektarbeiten wird je nach Aufgabe eine hauptverantwortliche Person bestimmt. 
-	Diese kann Teilaufgaben definieren und sie an andere Teammitglieder zur Bearbeitung delegieren. 
-	Die Hierarchie im Team ist bewusst flach und ohne eigentlichen Projektleiter gehalten. 
-	Entscheide werden im Plenum diskutiert und gefällt. Die Leitung oder Führung einer Besprechung obliegt dem verantwortlichen Teammitglied des jeweiligen Themas.
-	Mit dieser Teamstruktur ist gewährleistet, dass alle Mitglieder Verantwortung tragen können und müssen. Dies soll die Motivation und die Eigeninitiative fördern.
+	Das Projektteam 32 besteht aus sieben Personen welche sich auf folgende 
+	Studienrichtungen aufteilen: Drei Personen aus der Maschinentechnik, 
+	drei Personen aus der Informatik und eine Person aus der Elektrotechnik. 
+	Die Studienrichtungen sind sogleich die jeweiligen Verantwortungen. 
+	In den Bereichen mit mehreren Projektmitgliedern wird die Verantwortung 
+	für Teilaufgaben jeweils situativ verteilt. Für allgemeine Projektarbeiten 
+	wird je nach Aufgabe eine hauptverantwortliche Person bestimmt. Diese kann 
+	Teilaufgaben definieren und sie an andere Teammitglieder zur Bearbeitung 
+	delegieren. Die Hierarchie im Team ist bewusst flach und ohne eigentlichen 
+	Projektleiter gehalten. Entscheide werden im Plenum diskutiert und gefällt. 
+	Die Leitung oder Führung einer Besprechung obliegt dem verantwortlichen 
+	Teammitglied des jeweiligen Themas.	Mit dieser Teamstruktur ist 
+	gewährleistet, dass alle Mitglieder Verantwortung tragen können und müssen. 
+	Dies soll die Motivation und die Eigeninitiative fördern.
