--- a/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
@@ -1,6 +1,25 @@
 \subsection{Ausblick}
-Im nächsten Semester wird das erarbeitete Konzept realisiert. Aus administrativer Sicht muss vermehrt und besser zu Beginn einer jeden Meilensteinphase abgesprochen werden, welche Dokumente mit welchem spezifischen Inhalt erstellt werden müssen. Während dem PREN1-Modul musste jedes Mal vor einem Meilenstein ein Grosszahl der Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der Inhalt nicht dem Geforderten entsprach.\\
+Im nächsten Semester wird das erarbeitete Konzept realisiert. Aus administrativer 
+Sicht muss vermehrt und besser zu Beginn einer jeden Meilensteinphase abgesprochen 
+werden, welche Dokumente mit welchem spezifischen Inhalt erstellt werden müssen. 
+Während dem PREN1-Modul musste jedes Mal vor einem Meilenstein ein Grosszahl der 
+Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der 
+Inhalt nicht dem Geforderten entsprach.\\
 \\
-Mechanisch gesehen steht das Konzept. Einzelne Teilprobleme wie beispielsweise das Zuführen der Bälle zu den Schwungräder mittels Leitblech müssen noch konstruiert werden. Das Gewicht der Abwurfeinheit soll zudem weiter optimiert werden, um das Gewichtslimit einzuhalten. Um die einzelnen Bauteile fertigen zu können, müssen zunächst die CAD Zeichnungen erstellt werden. Des Weiteren muss die Software entwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der Objekterkennung und der Kommunikation zwischen Controller und Smartphone durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem der DesktopViewer weiter ausgebaut werden, um Feinabstimmungen über eine GUI-Applikation zu ermöglichen.\\
+Mechanisch gesehen steht das Konzept. Einzelne Teilprobleme wie beispielsweise 
+das Zuführen der Bälle zu den Schwungräder mittels Leitblech müssen noch konstruiert 
+werden. Das Gewicht der Abwurfeinheit soll zudem weiter optimiert werden, um das 
+Gewichtslimit einzuhalten. Um die einzelnen Bauteile fertigen zu können, müssen 
+zunächst die CAD Zeichnungen erstellt werden. Des Weiteren muss die Software 
+entwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der 
+Objekterkennung und der Kommunikation zwischen Controller und Smartphone 
+durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen 
+Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem 
+der DesktopViewer weiter ausgebaut werden, um Feinabstimmungen über eine 
+GUI-Applikation zu ermöglichen.\\
 \\
-Ungewissheit besteht ebenfalls betreffend der Mitarbeit von Manuel Güdel. Da er das Modul PREN 2 bereits letztes Jahr absolviert hat, ist noch nicht sicher, ob er nächstes Semester offiziell an der Entwicklung weiterarbeiten kann. Inoffiziell hat er bereits seine Hilfe angeboten und wird das Team weiterhin so gut wie möglich unterstützen.
+Ungewissheit besteht ebenfalls betreffend der Mitarbeit von Manuel Güdel. Da er 
+das Modul PREN 2 bereits letztes Jahr absolviert hat, ist noch nicht sicher, ob 
+er nächstes Semester offiziell an der Entwicklung weiterarbeiten kann. Inoffiziell 
+hat er bereits seine Hilfe angeboten und wird das Team weiterhin so gut wie möglich 
+unterstützen.
