--- a/Dokumentation/Enddokumentation/Tests/Testberichte.tex
+++ b/Dokumentation/Enddokumentation/Tests/Testberichte.tex
@@ -1,2 +1,4 @@
 \section{Testberichte}
-In nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. Diese waren notwendig, um Erkenntnisse zu den einzelnen kritischen Teilprobleme zu gewinnen.
+In nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
+Diese waren notwendig, um Erkenntnisse zu den einzelnen kritischen 
+Teilprobleme zu gewinnen.
