--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -40,7 +40,8 @@ das Gerät parallel zur Spielfeldwand zu verschieben und den Korb mit einer Smar
 erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werden. Als
 Ausgangslage führt die grüne Variante die Bälle in einem Drehkranz und befördert diese einzeln
 in den Korb, die restlichen Kriterien werden kongruent zur zweiten Variante ausgeführt. Im
-orangen Konzept befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt. Die übrigen Teilprobleme verwenden
+orangen Konzept befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger 
+Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt. Die übrigen Teilprobleme verwenden
 wiederum, äquivalent zur zweiten Variante eine Smartphone-Kamera zur Korberkennung und einen
 Akkumulator als Energieversorgung.\\
 \\
