--- a/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
@@ -10,7 +10,8 @@ Mechanisch gesehen steht das Konzept. Einzelne Teilprobleme wie beispielsweise
 das Zuführen der Bälle zu den Schwungräder mittels Leitblech müssen noch konstruiert 
 werden. Das Gewicht der Abwurfeinheit soll zudem weiter optimiert werden, um das 
 Gewichtslimit einzuhalten. Um die einzelnen Bauteile fertigen zu können, müssen 
-zunächst die CAD\footnote{\textbf{C}omputer-\textbf{A}ided \textbf{D}esign} Zeichnungen erstellt werden. Des Weiteren muss die Software 
+zunächst die CAD\footnote{\textbf{C}omputer-\textbf{A}ided \textbf{D}esign} 
+Zeichnungen erstellt werden. Des Weiteren muss die Software 
 entwickelt werden. Es wurden bereits Tests zur Bluetooth-Kommunikation, der 
 Objekterkennung und der Kommunikation zwischen Controller und Smartphone 
 durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen 
