Das File und die Referenzen für den Beleuchtungstest erstellt

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -82,6 +82,8 @@
     \newpage
     \input{Enddokumentation/Tests/AcrylglasTest}
     \newpage
+    \input{Enddokumentation/Tests/Beleuchtungstest}
+    \newpage
     \input{Enddokumentation/Tests/BrushlessMotorTest}
     \clearpage
     %
