--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -30,7 +30,7 @@
 		basiert auf der Tatsache, dass der Korb deutlich dunkler als der 
 		Hintergrund ist. Dies konnte anhand eines Testversuches unter variablen 
 		Lichtbedingungen bestätigt werden. Der Versuch ist in Kapitel 
-		\ref{chap:ListTest} aufgeführt. Um mit dem von der Kamera zuvor 
+		\ref{chap:LichtTest} aufgeführt. Um mit dem von der Kamera zuvor 
 		aufgenommenen Bild arbeiten zu können, müssen die Ränder abgeschnitten 
 		werden (vor allem links und rechts geht der Bildbereich über das Spielfeld 
 		hinaus, was das Resultat verfälschen könnte). Als zweiter Schritt wird 
