--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -109,6 +109,7 @@
     % Einfügen des Quellenverzeichnisses mit einem anderen Namen
     %
     \begin{flushleft}
+        \nocite{*} %Alle Quellen ausgeben
         \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
 %        \{\refname}{Quellenverzeichnis}
         \bibliography{Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source,Quellen/Quellen}{} %!!! Kein Leerzeichen nach dem , !!!!
