--- a/Dokumentation/Quellen/Quellen.bib
+++ b/Dokumentation/Quellen/Quellen.bib
@@ -1,14 +1,6 @@
-@magazine{beruf:Chemie,
+@magazine{M:Chemie,
     author = {{chemnitzer schulmodell}},
     title = {{Dichte fester Stoffe}},
     year = {2013},howpublished = {Abrufbar unter http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html}},
     note = {25. \APACmonth{11} 2014}
-}
-
-@article{studie:SwissEngineering,
-    author    = {{Swiss Engineering}},
-    title     = {{Ingenieure braucht das Land}},
-    journal   = {dossierpolitik},
-    volume    = {{Nr. 12}},
-    year      = {2011}
 }
