--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -30,6 +30,6 @@ mit einer Antihaftmatte erreicht, welche zwischen Spielfeld und Bodenplatte ange
 		\rule{0pt}{11pt}Aluminium $3 mm$ & $2.71 \frac{g}{cm^3}$ & $536 g$ & $1000 \frac{kN}{mm^2}$ \\ 
 		\rule{0pt}{11pt}Acrylglas $5 mm$ & $1.19 \frac{g}{cm^3}$ & $393 g$ & $3300 \frac{N}{mm^2}$  \\ 
 	\end{tabular} 
-	\caption[Dichte der Stoffe]{Dichte der Stoffe \cite{beruf:Chemie}}
+	\caption[Dichte der Stoffe]{Dichte der Stoffe \cite{M:Chemie}}
 	\centering
 \end{table}
