--- a/Dokumentation/Quellen/Quellen.bib
+++ b/Dokumentation/Quellen/Quellen.bib
@@ -1,6 +1,7 @@
-@magazine{M:Chemie,
+@misc{M:Chemie,
     author = {{chemnitzer schulmodell}},
     title = {{Dichte fester Stoffe}},
-    year = {2013},howpublished = {Abrufbar unter http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html}},
+    year = {2013},
+    howpublished = {{Abrufbar unter http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html}},
     note = {25. \APACmonth{11} 2014}
 }
