--- a/Dokumentation/Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source.bib
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source.bib
@@ -1,17 +1,53 @@
 @techreport{AppNote:BrushlessuC,
-    author = {{Atmel Corporation }},
+    author      = {{Atmel Corporation}},
     institution = {{Atmel Corporation}},
     address     = {{1600 Technology Drive, San Jose, CA 95110 USA}},
-    title     = {{Atmel AVR443: Sensor-based Control of Three Phase Brushless DC Motor}},
-    type      = {{App. Note}},
+    title       = {{Atmel AVR443: Sensor-based Control of Three Phase Brushless DC Motor}},
+    type        = {{App. Note}},
     year        = {2013},
     note        = {{2596C-AVR-07/2013}}
 }
 
+@techreport{AppNote:Stepper,
+    author      = {{Thomas Hopkins}},
+    institution = {{STMicroelectronics}},
+    title       = {{AN235 Application note, Stepper motor driving}},
+    type        = {{App. Note}},
+    year        = {2012},
+    address     = {{39, Chemin du Champ des FillesPlan-Les-Ouates, CH1228 Geneva}},
+    note        = {{Doc ID 1679 Rev 2}}
+}
+
+@techreport{Datasheet:L6480,
+    author      = {{STMicroelectronics}},
+    institution = {{STMicroelectronics}},
+    title       = {{L6480, cSPIN™: microstepping motor controller with motion engine and SPI}},
+    type        = {{Datasheet}},
+    address     = {{39, Chemin du Champ des FillesPlan-Les-Ouates, CH1228 Geneva}},
+    year        = {2012}
+}
+
+@manual{Doku:Stepper,
+    author      = {{Prof. Dr. Wolfgang Matthes}},
+    address     = {{Peukinger Weg 34, 59423 Unna}},
+    title       = {{Schrittmotoren (Einführung)}},
+    year        = {2007}
+}
+
+
 @misc{HSLU:Pluess,
-author = {{Tobias Plüss}},
-howpublished = {{Hochschule Luzern, Technik und Architektur}},
-note = {{In einem Gespräch}},
-month = {\APACmonth{11}},
-year = {2014}
+    author          = {{Tobias Plüss}},
+    howpublished    = {{Hochschule Luzern, Technik und Architektur}},
+    note            = {{In einem Gespräch}},
+    month           = {\APACmonth{11}},
+    year            = {2014}
+}
+
+@misc{smps,
+    author          = "Ulrich Schlienz",
+    title           = "{Schaltnetzteile und ihre Preipherie}",
+    year	    = "2009",
+    edition         = "4",
+    publisher       = "Vieweg+Tuebner",
+    ISBN            = "978-3-3848-0613-0"
 }
