--- a/Dokumentation/Enddokumentation/Tests/Testberichte.tex
+++ b/Dokumentation/Enddokumentation/Tests/Testberichte.tex
@@ -1,4 +1,3 @@
 \section{Testberichte}
 In nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
-Diese waren notwendig, um Erkenntnisse zu den einzelnen kritischen 
-Teilprobleme zu gewinnen.
+Diese Tests sind durchgeführt worden, damit einzelne offene Fragen besser beantwortet werden können. Zugleich können einzelne Teilbereiche der Ballbeschleunigung praktisch getestet werden. Das Ziel der Tests ist auch, möglichst viele unbeachtete Probleme frühzeitig zu erkennen und diese zu lösen. 
