--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,3 +1,16 @@
-\subsection{Brushless-Motor}
+﻿\subsection{Brushless-Motor}
 	Dieser Test wurde in der PREN-ET-Gruppe durchgeführt. Dabei handelt es sich um einen komplexeren und grösserern Aufbau.
+
+\begin{tabular}{p{3.6cm}p{9.4cm}}
+\rule{0pt}{11pt}\textit{Typ}              & Brushless-Motor Ansteuerung \\ 
+\rule{0pt}{11pt}\textit{Datum}:           & 6.12.2014   \\
+\rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
+\rule{0pt}{11pt}\textit{Tester}:          & Yves Studer & ... \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Den konstruierten Brushless-Regler zu bauen und die Leistungsgrenzen zu testen. \\
+\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Der Brushless-Regler funktioniert einwandfrei auch unter einer sehr hohen Drehzalb bis ??? 20'000 U/min. ??? 
+
+\end{tabular}
+
+
+
     \input{\EtPath/Testbericht}
