--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -1,4 +1,4 @@
-\subsection{Ballmaschine (Eruieren der Nenndrehzahl)}
+﻿\subsection{Ballmaschine (Eruieren der Nenndrehzahl)}
 
 \begin{tabular}{p{3.6cm}p{9.4cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
