--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -14,3 +14,11 @@
 \end{tabular}
 
 Der Wurfmechanismus besteht aus zwei Kunststoffrädern mit einer weichen Pneubeschichtung. Die Räder sind an einer Metallplatte, direkt auf der Welle der Motoren angebracht. Die Motoren sind zwei Gleichstrommotoren, welche direkt an ein Netzteil angeschlossen sind. Die Drehzahl wird über die Spannungsstärke geregelt. Der Abwurfwinkel ist durch die Stellung der Metallplatte gegeben, welche in einem beweglichen Schraubstock eingespannt ist. Dadurch können diverese Winkel eingestellt werden. Die Zuführung der Bälle erfolgt manuell über eine Schiene.
+
+\begin{figure}[h!]
+	\includegraphics[width=0.7\textwidth,clip,trim=0mm 10cm 0mm 12cm]
+	{Funktionstests/Bilder/Ballmaschine.jpg}
+	\centering
+	\caption{Funktionsmuster Ballmaschine} 
+\label{abb:Ballmaschine_Drehzahl}
+\end{figure}
