--- a/Dokumentation/Enddokumentation/Tests/Testberichte.tex
+++ b/Dokumentation/Enddokumentation/Tests/Testberichte.tex
@@ -1,3 +1,7 @@
 \section{Testberichte}
 In nachfolgenden Kapitel sind die einzelnen Testversuche beschrieben. 
-Diese Tests sind durchgeführt worden, damit einzelne offene Fragen besser beantwortet werden können. Zugleich können einzelne Teilbereiche der Ballbeschleunigung praktisch getestet werden. Das Ziel der Tests ist auch, möglichst viele unbeachtete Probleme frühzeitig zu erkennen und diese zu lösen. 
+Diese Tests sind durchgefÃ¼hrt worden, damit einzelne offene Fragen 
+besser beantwortet werden kÃ¶nnen. Zugleich kÃ¶nnen einzelne Teilbereiche 
+der Ballbeschleunigung praktisch getestet werden. Das Ziel der Tests ist 
+auch, mÃ¶glichst viele unbeachtete Probleme frÃ¼hzeitig zu erkennen und 
+diese zu lÃ¶sen. 
