--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,16 +1,18 @@
-﻿\subsection{Brushless-Motor}
-	Dieser Test wurde in der PREN-ET-Gruppe durchgeführt. Dabei handelt es sich um einen komplexeren und grösserern Aufbau.
+\subsection{Brushless-Motor}
+	Dieser Test wurde in der PREN-ET-Gruppe durchgeführt. Dabei handelt es sich um 
+	einen komplexeren und grösserern Aufbau.\\
 
 \begin{tabular}{p{3.6cm}p{9.4cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Brushless-Motor Ansteuerung \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 6.12.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
-\rule{0pt}{11pt}\textit{Tester}:          & Yves Studer & ... \\
-\rule{0pt}{11pt}\textit{Ziel des Testes}: & Den konstruierten Brushless-Regler zu bauen und die Leistungsgrenzen zu testen. \\
-\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Der Brushless-Regler funktioniert einwandfrei auch unter einer sehr hohen Drehzalb bis ??? 20'000 U/min. ??? 
-
+\rule{0pt}{11pt}\textit{Tester}:          & Yves Studer \& Daniel Winz \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Überprüfen, ob der neue Ansatz in der 
+Praxis funktioniert und umsetzbar ist\\
+\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Die Brushless-
+Steuerung funktioniert einwandfrei auch bei einer sehr hohen Drehzahl von bis zu 
+$20000\frac{1}{min}$. Mittels einer Wirbelstrombremse konnte $120 W$ elektrische 
+Leistung umgesetzt werden. Es zeigte sich, dass eine Regelung benötigt wird, um 
+eine konstante Drehzahl auch unter Last zu erreichen.
 \end{tabular}
-
-
-
     \input{\EtPath/Testbericht}
