--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -1,2 +1,10 @@
 \subsection{Beleuchtungstest}
 \label{chap:LichtTest}
+\begin{tabular}{p{3.6cm}p{9.4cm}}
+	\rule{0pt}{11pt}\textit{Typ}              & Einfluss der Lichtverhältnisse auf das Resultat der Korberkennung  \\ 
+	\rule{0pt}{11pt}\textit{Datum}:           & 04.12.2014   \\
+	\rule{0pt}{11pt}\textit{Ort}:             & Teaminseln, Trakt 3 HSLU \\
+	\rule{0pt}{11pt}\textit{Tester}:          & Thomas, Pascal, Livio, Matteo, Niklaus\\
+	\rule{0pt}{11pt}\textit{Ziel des Testes}: & Es soll festgestellt werden, ob der entwickelte Algorithmus zur Korberkennung bei Verwendung von starken Scheinwerfern (und bei dem daraus resultierenden Schattenwurf) funktioniert.  \\
+	\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Das Modellspielfeld wurde mit zwei ??? Watt Scheinwerfern ausgeleuchtet und anschliessend mit mehreren Smartphones (LG Nexus, HTC One und Nokia Lumia) abfotografiert. Die Resultate wurden dem Korberkennungs-Algorithmus übergeben, welcher in allen die Position des Korbes bestimmen konnte.  \\
+\end{tabular}
