--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -1,6 +1,15 @@
 \subsection{Beleuchtungstest}
-\label{chap:LichtTest}
 \begin{tabular}{p{3.6cm}p{9.4cm}}
+\rule{0pt}{11pt}\textit{Typ}              & 4 Bauscheinwerfer \\ 
+\rule{0pt}{11pt}\textit{Datum}:           & 04.12.2014   \\
+\rule{0pt}{11pt}\textit{Ort}:             & originales Spielfeld \\
+\rule{0pt}{11pt}\textit{Tester}:          & Gruppe 32 \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Den Schattenwurf, welcher von der Beleuchtung verursacht wird auf der Stützwand hinter dem Kübel zu rekonstruieren. \\
+\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & 
+Der Schattenwurf kann vernachlässigt werden. Die Bilderkennung wird durch den Schatten nicht gestört. 
+\end{tabular}
+
+\label{chap:LichtTest}\begin{tabular}{p{3.6cm}p{9.4cm}}
 	\rule{0pt}{11pt}\textit{Typ}              & Einfluss der LichtverhÃ¤ltnisse auf das Resultat der Korberkennung  \\ 
 	\rule{0pt}{11pt}\textit{Datum}:           & 04.12.2014   \\
 	\rule{0pt}{11pt}\textit{Ort}:             & Teaminseln, Trakt 3 HSLU \\
