--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -4,9 +4,9 @@
 \rule{0pt}{11pt}\textit{Datum}:           & 04.12.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & originales Spielfeld \\
 \rule{0pt}{11pt}\textit{Tester}:          & Gruppe 32 \\
-\rule{0pt}{11pt}\textit{Ziel des Testes}: & Den Schattenwurf, welcher von der Beleuchtung verursacht wird auf der Stützwand hinter dem Kübel zu rekonstruieren. \\
+\rule{0pt}{11pt}\textit{Ziel des Testes}: & Den Schattenwurf, welcher von der Beleuchtung verursacht wird auf der StÃ¼tzwand hinter dem KÃ¼bel zu rekonstruieren. \\
 \rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & 
-Der Schattenwurf kann vernachlässigt werden. Die Bilderkennung wird durch den Schatten nicht gestört. 
+Der Schattenwurf kann vernachlÃ¤ssigt werden. Die Bilderkennung wird durch den Schatten nicht gestÃ¶rt. 
 \end{tabular}
 
 \label{chap:LichtTest}\begin{tabular}{p{3.6cm}p{9.4cm}}
