--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -62,6 +62,9 @@
     \usepackage{tikz}           % TikZ - "TikZ ist kein Zeichenprogramm"
    % \usepackage{wrapfig} 
     \usetikzlibrary{tikzmark}   % References for hooking tikz graphics to
+    
+    \usetikzlibrary{decorations.pathmorphing}
+    \usetikzlibrary{decorations.pathreplacing}
 %
 % Rechnen in Tabellen. Zeichen für den Dezimalpunkt
 %
