--- a/Dokumentation/Common/layout.sty
+++ b/Dokumentation/Common/layout.sty
@@ -45,6 +45,8 @@
     \usepackage{tikz}           % TikZ - "TikZ ist kein Zeichenprogramm"
     \usepackage{wrapfig} 
     \usetikzlibrary{tikzmark}   % References for hooking tikz graphics to
+    \usetikzlibrary{decorations.pathmorphing}
+    \usetikzlibrary{decorations.pathreplacing}
 
 % Mathematik
     \usepackage{amsmath}        % Strukturierung von Formeln
