--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -121,9 +121,15 @@
 	\begin{appendix}
 		\clearpage
 		\pagenumbering{Roman} % römische Nummerierung des Anhangs (Grosse Buchstaben)
-		\section{Anhang}	            
-		\input{Enddokumentation/Anhang/Berechnungen}
-		\newpage
+		\section{Anhang}
+        \subsection{Berechnung}
+            \input{Enddokumentation/Anhang/GlossarBerechnung}
+            \input{Enddokumentation/Anhang/BerechnungenSchwungradantrieb}
+            \newpage
+            \input{Enddokumentation/Anhang/BerechnungDrehmomentFoerderband}
+            \newpage
+            \input{Enddokumentation/Anhang/BerechnungHorizontaleAusrichtung}
+    		\newpage
 		\input{Enddokumentation/Anhang/StepperAnhang}
 	\end{appendix}  
 \end{document}
